--- a/app/src/main/res/layout/ad_menu.xml
+++ b/app/src/main/res/layout/ad_menu.xml
@@ -24,26 +24,25 @@
             <ImageView
                 android:id="@+id/adMenuImage"
                 android:layout_width="match_parent"
-                android:layout_height="220dp"
+                android:layout_height="160dp"
                 android:scaleType="fitXY" />
 
                 <TextView
                     android:id="@+id/adMenuBuyNow"
-                    android:visibility="gone"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="34dp"
                     android:layout_below="@+id/adMenuImage"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginTop="-0dp"
-                    android:layout_marginEnd="0dp"
+                    android:layout_marginTop="-34dp"
                     android:background="@color/colorGreen"
                     android:fontFamily="sans-serif"
                     android:gravity="center"
                     android:paddingLeft="4dp"
                     android:text="Buy Now"
                     android:textColor="@color/colorWhite"
-                    android:textSize="18sp"
-                    android:textStyle="bold"></TextView>
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:visibility="visible"></TextView>
 
             </RelativeLayout>
 
