--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         tools:context=".fragment.Account">
 
@@ -24,12 +24,13 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="40dp"
                 android:background="#ffffff"
-                android:drawableLeft="@drawable/ic_baseline_event_24"
+                android:drawableStart="@drawable/ic_baseline_event_24"
                 android:drawablePadding="20dp"
                 android:elevation="4dp"
                 android:fontFamily="@font/droid_sans"
-                android:paddingLeft="6dp"
-                android:text="Get started with ikman"
+                android:paddingStart="6dp"
+                android:paddingEnd="6dp"
+                android:text="@string/account_getStarted"
                 android:textSize="18sp"
                 android:textAlignment="textStart"
                 android:textAllCaps="false"></Button>
@@ -41,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="24dp"
-            android:text="Testing Account"
+            android:text=""
             android:fontFamily="sans-serif-medium"
             android:textSize="24sp"></TextView>
 
@@ -51,12 +52,13 @@
             android:layout_height="54dp"
             android:layout_marginBottom="4dp"
             android:background="#ffffff"
-            android:drawableLeft="@drawable/ic_baseline_filter_24"
+            android:drawableStart="@drawable/ic_baseline_filter_24"
             android:drawablePadding="20dp"
             android:elevation="4dp"
             android:fontFamily="@font/droid_sans"
-            android:paddingLeft="6dp"
-            android:text="My Ads"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/account_myads"
             android:textSize="18sp"
             android:textAlignment="textStart"
             android:textAllCaps="false"></Button>
@@ -67,12 +69,13 @@
             android:layout_height="54dp"
             android:layout_marginBottom="4dp"
             android:background="#ffffff"
-            android:drawableLeft="@drawable/ic_baseline_event_24"
+            android:drawableStart="@drawable/ic_baseline_event_24"
             android:drawablePadding="20dp"
             android:elevation="4dp"
             android:fontFamily="@font/droid_sans"
-            android:paddingLeft="6dp"
-            android:text="My membership"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/account_membership"
             android:textSize="18sp"
             android:textAlignment="textStart"
             android:textAllCaps="false"></Button>
@@ -83,12 +86,13 @@
             android:layout_height="54dp"
             android:layout_marginBottom="4dp"
             android:background="#ffffff"
-            android:drawableLeft="@drawable/ic_baseline_star_24"
+            android:drawableStart="@drawable/ic_baseline_star_24"
             android:drawablePadding="20dp"
             android:elevation="4dp"
             android:fontFamily="@font/droid_sans"
-            android:paddingLeft="6dp"
-            android:text="Favourites"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/account_fav"
             android:textSize="18sp"
             android:textAlignment="textStart"
             android:textAllCaps="false"></Button>
@@ -100,12 +104,13 @@
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:background="#ffffff"
-            android:drawableLeft="@drawable/ic_baseline_person_24"
+            android:drawableStart="@drawable/ic_baseline_person_24"
             android:drawablePadding="20dp"
             android:elevation="4dp"
             android:fontFamily="@font/droid_sans"
-            android:paddingLeft="6dp"
-            android:text="My profile"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/account_profile"
             android:textSize="18sp"
             android:textAlignment="textStart"
             android:textAllCaps="false"></Button>
@@ -116,16 +121,17 @@
             android:layout_height="54dp"
             android:layout_marginBottom="4dp"
             android:background="#ffffff"
-            android:drawableLeft="@drawable/ic_baseline_verified_user_24"
+            android:drawableStart="@drawable/ic_baseline_verified_user_24"
             android:drawablePadding="20dp"
             android:drawableTint="#a6a6a6"
             android:elevation="4dp"
             android:fontFamily="@font/droid_sans"
-            android:paddingLeft="6dp"
-            android:text="Stay safe"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/account_safe"
             android:textAlignment="textStart"
             android:textSize="18sp"
-            android:textAllCaps="false"></Button>
+            android:textAllCaps="false" tools:targetApi="m"></Button>
 
         <Button
             android:id="@+id/faq"
@@ -133,12 +139,13 @@
             android:layout_height="54dp"
             android:layout_marginBottom="4dp"
             android:background="#ffffff"
-            android:drawableLeft="@drawable/ic_baseline_battery_unknown_24"
+            android:drawableStart="@drawable/ic_baseline_battery_unknown_24"
             android:drawablePadding="20dp"
             android:elevation="4dp"
             android:fontFamily="@font/droid_sans"
-            android:paddingLeft="6dp"
-            android:text="FAQ"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/account_faq"
             android:textAlignment="textStart"
             android:textSize="18sp"
             android:textAllCaps="false"></Button>
@@ -148,16 +155,17 @@
             android:layout_height="54dp"
             android:layout_marginBottom="4dp"
             android:background="#ffffff"
-            android:drawableLeft="@drawable/ic_baseline_slideshow_24"
+            android:drawableStart="@drawable/ic_baseline_slideshow_24"
             android:drawablePadding="20dp"
             android:drawableTint="#a6a6a6"
             android:elevation="4dp"
             android:fontFamily="@font/droid_sans"
-            android:paddingLeft="6dp"
-            android:text="How to sell fast"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/account_howto"
             android:textSize="18sp"
             android:textAlignment="textStart"
-            android:textAllCaps="false"></Button>
+            android:textAllCaps="false" tools:targetApi="m"></Button>
 
         <Button
             android:id="@+id/donateUs"
@@ -165,12 +173,13 @@
             android:layout_height="54dp"
             android:layout_marginBottom="4dp"
             android:background="#ffffff"
-            android:drawableLeft="@drawable/ic_baseline_double_arrow_24"
+            android:drawableStart="@drawable/ic_baseline_double_arrow_24"
             android:drawablePadding="20dp"
             android:elevation="4dp"
             android:fontFamily="@font/droid_sans"
-            android:paddingLeft="6dp"
-            android:text="Donate us"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/account_donate"
             android:textSize="18sp"
             android:textAlignment="textStart"
             android:textAllCaps="false"></Button>
@@ -182,12 +191,13 @@
             android:layout_marginBottom="68dp"
             android:layout_marginTop="8dp"
             android:background="#ffffff"
-            android:drawableLeft="@drawable/ic_baseline_power_settings_new_24"
+            android:drawableStart="@drawable/ic_baseline_power_settings_new_24"
             android:drawablePadding="20dp"
             android:elevation="4dp"
             android:fontFamily="@font/droid_sans"
-            android:paddingLeft="6dp"
-            android:text="Log out"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:text="@string/account_logout"
             android:textSize="18sp"
             android:textAlignment="textStart"
             android:textAllCaps="false"></Button>
