--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -23,43 +23,42 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <LinearLayout
+                android:id="@+id/steperWraper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="40dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical"
                 android:background="@color/colorWhite"
-                android:padding="20dp">
+                android:padding="10dp">
 
                 <TextView
                     android:id="@+id/steperHeader"
+                    android:padding="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
                     android:text="@string/orderStepHeader"
                     android:textSize="18sp"></TextView>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    app:cardCornerRadius="20dp"
-                    android:layout_below="@+id/steperHeader"
                     app:cardUseCompatPadding="true"
+                    app:cardCornerRadius="10dp"
+                    android:elevation="8dp"
                     android:layout_height="wrap_content">
-
-                <com.baoyachi.stepview.HorizontalStepView
-                    android:id="@+id/step_view"
-                    android:background="#CC03A9F4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="20dp"
-                    android:layout_centerInParent="true" />
-
-                </androidx.cardview.widget.CardView>
-            </RelativeLayout>
+                    <com.shuhart.stepview.StepView
+                        android:id="@+id/step_view"
+                        android:padding="14dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#03A9F4"/>
+</androidx.cardview.widget.CardView>
+            </LinearLayout>
 
 
             <FrameLayout
-                android:id="@+id/orderStepContent"
+                android:id="@+id/orderStepCont"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -69,6 +68,7 @@
     </ScrollView>
 
     <LinearLayout
+        android:id="@+id/continueWrapOrder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
