--- a/app/src/main/res/layout/ads_row.xml
+++ b/app/src/main/res/layout/ads_row.xml
@@ -18,8 +18,8 @@
             android:id="@+id/myaddsImage"
             android:layout_width="140dp"
             android:layout_height="140dp"
-
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@mipmap/ic_launcher"
+            android:contentDescription="@string/image" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,9 +32,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="serif"
-                android:text="zddsdsdsds"
                 android:textColor="#000000"
-                android:textSize="22dp"></TextView>
+                android:textSize="22sp"></TextView>
 
             <TextView
                 android:id="@+id/myaddsPrice"
@@ -43,8 +42,7 @@
                 android:layout_marginBottom="6dp"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center_vertical"
-                android:text="zddsdsdsds"
-                android:textSize="18dp"></TextView>
+                android:textSize="18sp"></TextView>
 
             <TextView
                 android:id="@+id/myaddsDate"
@@ -53,7 +51,7 @@
                 android:layout_marginBottom="2dp"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center_vertical"
-                android:textSize="16dp"></TextView>
+                android:textSize="16sp"></TextView>
 
             <TextView
                 android:id="@+id/myaddsAprovedStatus"
@@ -65,9 +63,8 @@
                 android:gravity="center"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:text="Not Approved"
                 android:textColor="#ffffff"
-                android:textSize="16dp"></TextView>
+                android:textSize="16sp"></TextView>
 
         </LinearLayout>
 
